--- a/RecurrentNeuralNetwork/RNN_wave_classification.ipynb
+++ b/RecurrentNeuralNetwork/RNN_wave_classification.ipynb
@@ -307,6 +307,32 @@
     "test_coswave = 10*np.cos(s)\n",
     "plt.plot(s,test_coswave)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cos positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = sess.run(p,feed_dict={X:test_coswave.reshape(1,20,1)})\n",
+    "idx = np.argmax(ans)\n",
+    "if idx == 0 :\n",
+    "    print(\"sin positive\")\n",
+    "elif idx == 1 :\n",
+    "    print(\"sin negative\")\n",
+    "elif idx == 2:\n",
+    "    print(\"cos positive\")\n",
+    "elif idx == 3:\n",
+    "    print(\"cos negative\")"
+   ]
   }
  ],
  "metadata": {
